# stride

./: .clang-format  .envrc  .gitignore  Cargo.toml  README.md  cargokit.yaml  flake.nix  flutter_rust_bridge.yaml  frb_generate.sh  pubspec.yaml  tests.nix  treefmt.nix
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yaml  release.yml  update-nix-flake-lock.yml
app/: .gitignore  analysis_options.yaml  flutter  pubspec.yaml
app/android/: settings.gradle
app/android/app/: build.gradle
app/hook/: build.dart
app/integration_test/: simple_test.dart
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/blocs/: dialog_bloc.dart  log_bloc.dart  plugin_bloc.dart  plugin_manager_bloc.dart  settings_bloc.dart  tasks_bloc.dart  tost_bloc.dart
app/lib/bridge/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  task.dart
app/lib/routes/: commits_route.dart  encryption_key_add_route.dart  encryption_key_route.dart  encryption_keys_route.dart  initial_route.dart  known_hosts_route.dart  logging_routes.dart  plugin_list_route.dart  plugin_route.dart  repository_list_route.dart  repository_new_route.dart  repository_route.dart  settings_route.dart  (+5 more)
app/linux/: CMakeLists.txt  my_application.cc
app/rust_builder/: pubspec.yaml
app/scripts/: build-appimage  generate-icons  rasterize-image  reproducible
app/test/: mockability_test.dart
app/windows/: CMakeLists.txt
cli/: Cargo.toml
cli/src/: backend.rs  cli.rs  main.rs
crates/backend/: Cargo.toml
crates/backends/git/: Cargo.toml
crates/backends/git/src/: config.rs  encryption_key.rs  error.rs  key_store.rs  lib.rs  operation_iterator.rs  ssh_key.rs
crates/backends/git/src/serialization/: mod.rs  tests.rs
crates/backends/taskchampion/: Cargo.toml
crates/backends/taskchampion/src/: error.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  constant.rs  event.rs  lib.rs  state.rs
crates/core/src/backend/: mod.rs
crates/core/src/task/: annotation.rs  mod.rs  tests.rs  uda.rs
crates/crdt/: Cargo.toml
crates/crdt/src/: actor.rs  difference.rs  error.rs  lib.rs
crates/crdt/src/change/: mod.rs
crates/crdt/src/hlc/: mod.rs  tests.rs
crates/crdt/src/version_vector/: mod.rs  tests.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs  tests.rs
crates/crypto/src/crypter/: mod.rs  tests.rs
crates/crypto/src/ed25519/: mod.rs
crates/crypto/src/openssh/: mod.rs  tests.rs
crates/database/: Cargo.toml
crates/database/migrations/: 000_migration.sql  001_tasks.sql
crates/database/src/: conversion.rs  error.rs  lib.rs  migration.rs  operation.rs
crates/database/src/conversion/: mod.rs  tests.rs
crates/database/src/database/: functions.rs  mod.rs  tests.rs  transaction.rs
crates/database/src/migrations/: mod.rs  v000_initial.rs  v000_migration.rs  v001_task.rs
crates/database/src/operation/: difference.rs  mod.rs
crates/encryption/: Cargo.toml
crates/flutter_bridge/: Cargo.toml  rust-toolchain.toml
crates/flutter_bridge/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  key_store.rs  lib.rs
crates/flutter_bridge/src/api/: database.rs  error.rs  filter.rs  git.rs  logging.rs  mod.rs  paths.rs  plugin.rs  plugin_manager.rs  repository.rs  settings.rs
crates/flutter_bridge/src/api/backend/: git.rs  mod.rs  taskchampion.rs
crates/flutter_bridge/src/api/repository/: git.rs  mod.rs  taskchampion.rs
crates/flutter_bridge/src/escape/: mod.rs
crates/flutter_bridge/src/git/: known_hosts.rs  mod.rs  source.rs
crates/flutter_bridge/src/plugin/: logging.rs  mod.rs
crates/flutter_bridge/src/repository/: mod.rs
crates/flutter_bridge/src/task/: mod.rs  tests.rs
crates/flutter_bridge/tests/: repository_init.rs
crates/flutter_bridge/tests/common/: mod.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/plugin_manager/: Cargo.toml
crates/plugin_manager/src/: error.rs  lib.rs  logging.rs  manager.rs  manifest.rs
crates/serialization/: Cargo.toml
crates/serialization/src/: error.rs  lib.rs
crates/serialization/src/blob/: mod.rs  tests.rs
flutter/: pubspec.yaml
flutter/lib/: main.dart  theme.dart
flutter/linux/: CMakeLists.txt
flutter/scripts/: build-appimage  generate-icons  update-changelog
flutter/test/: mockability_test.dart
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  theme.dart
lib/blocs/: settings_bloc.dart  tasks_bloc.dart
lib/routes/: known_hosts_route.dart  logging_routes.dart  route_not_found_route.dart  routes.dart  settings_route.dart  ssh_key_add_route.dart  ssh_keys_route.dart  task_add_route.dart  task_edit_route.dart  task_filter_route.dart  task_route.dart  tasks_route.dart
lib/utils/: functions.dart
lib/widgets/: custom_app_bar.dart  infinite_rotation_animation.dart  settings_widget.dart  tags_widget.dart  task_item_widget.dart
linux/: my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: filter.rs  logging.rs  mod.rs  paths.rs  repository.rs  settings.rs  simple.rs
rust/src/escape/: mod.rs  tests.rs
rust/src/git/: known_hosts.rs  mod.rs  source.rs
rust/src/repository/: mod.rs
rust/src/task/: mod.rs  tests.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_stride.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_stride.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: frb-generate  optimize-images  reproducible  rustup-setup
test/: mockability_test.dart
tests/: tests.nix
tests/git-sync/: ssh_keys.nix  test.nix
tests/taskchampion-sync/: test.nix
tools/interop/: Cargo.toml
tools/interop/src/: main.rs
web/: index.html  manifest.json
windows/flutter/: generated_plugins.cmake
windows/runner/: main.cpp
(+151 files in other folders)
