[package]
name = "stride_cli"
description = "Stride command line tool"
keywords = ["stride"]
categories = []
default-run = "stride"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
stride_core.workspace = true
stride_flutter_bridge.workspace = true

anyhow.workspace = true
dirs.workspace = true
uuid.workspace = true
serde.workspace = true
toml.workspace = true
clap = { version = "4.5.20", features = ["derive"] }
url = { version = "2.5.2", features = ["serde"] }

[[bin]]
name = "stride"
doc = false
path = "src/main.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
