[package]
name = "stride_cli"
description = "Stride command line tool"
keywords = ["stride"]
categories = []
default-run = "stride"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
stride_core.workspace = true
stride_database.workspace = true
stride_backend.workspace = true
stride_plugin_manager.workspace = true
stride_flutter_bridge.workspace = true

chrono.workspace = true
anyhow.workspace = true
dirs.workspace = true
uuid.workspace = true
log.workspace = true
clap.workspace = true
base64.workspace = true
url.workspace = true

[[bin]]
name = "stride"
doc = false
path = "src/main.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
