[package]
name = "stride_crdt"
description = "Stride's CRDT implementation"
keywords = ["stride"]
categories = []
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
stride_core.workspace = true

uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

stride_serialize = { workspace = true, optional = true }

[dev-dependencies]

[features]
serialize = ["dep:stride_serialize"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
