[package]
name = "stride_crypto"
description = "Stride related cryptography."
keywords = ["stride"]
categories = []
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
openssl.workspace = true
pem.workspace = true
getrandom.workspace = true
zeroize.workspace = true
base64.workspace = true

[dev-dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
