[package]
name = "stride_database"
description = "Stride's database"
keywords = ["stride", "wasm", "plugin"]
categories = []
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
stride_core.workspace = true

rusqlite.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
