[package]
name = "stride_database"
description = "Stride's database"
keywords = ["stride", "wasm", "plugin"]
categories = []
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
stride_core = { workspace = true, features = ["backend"] }
stride_crdt.workspace = true
stride_serialize.workspace = true

url.workspace = true
rusqlite = { workspace = true, features = ["functions"] }
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
indoc.workspace = true
log.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
