[package]
name = "stride_encryption"
description = "Stride encrypiton"
keywords = ["stride"]
categories = []
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
openssl.workspace = true
getrandom.workspace = true
zeroize.workspace = true

[dev-dependencies]
base64.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
