[package]
name = "stride_flutter_bridge"
description = "The bridge code between flutter and stride."
keywords = ["stride", "flutter", "bridge"]
categories = ["api-bindings"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies.flutter_rust_bridge]
version = "=2.1.0"
default-features = false
features = [
    "anyhow",
    "thread-pool",
    "rust-async",
    "user-utils",
    "dart-opaque",
    "chrono",
    "uuid",
]

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
git2.workspace = true
base64.workspace = true
openssl.workspace = true
pem.workspace = true
log.workspace = true
env_logger.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
