[package]
name = "stride_flutter_bridge"
description = "The bridge code between flutter and stride."
keywords = ["stride", "flutter", "bridge"]
categories = ["api-bindings"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.6.0", default-features = false, features = [
  "thread-pool",
  "rust-async",
  "user-utils",
  "dart-opaque",
  "chrono",
  "uuid",
  "anyhow",
] }
taskchampion = { version = "0.8.0", default-features = false, features = [
  "encryption",
  "server-sync",
] }

stride_crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
git2.workspace = true
base64.workspace = true
log.workspace = true
env_logger.workspace = true
getrandom.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
