[package]
name = "stride_flutter_bridge"
description = "The bridge code between flutter and stride."
keywords = ["stride", "flutter", "bridge"]
categories = ["api-bindings"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
stride_core = { workspace = true, features = ["taskchampion"] }
stride_logging.workspace = true
stride_database.workspace = true
stride_backend.workspace = true
stride_backend_git.workspace = true
stride_backend_taskchampion.workspace = true
stride_plugin_manager.workspace = true

flutter_rust_bridge = { version = "=2.11.1", features = ["chrono", "uuid"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
log.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
