[package]
name = "stride_logging"
description = "Stride related logging."
keywords = ["stride"]
categories = []
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
log.workspace = true
env_logger.workspace = true
chrono.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
