[package]
name = "stride_backend_git"
description = "Stride's git backend"
keywords = ["stride", "git", "backend"]
categories = []
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
stride_core.workspace = true
stride_crypto.workspace = true
stride_database.workspace = true
stride_backend.workspace = true

uuid.workspace = true
base64.workspace = true
git2.workspace = true
getrandom.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
