[package]
name = "stride_backend_taskchampion"
description = "Stride's taskchampion backend"
keywords = ["stride", "taskchampion"]
categories = []
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
stride_core = { workspace = true, features = ["taskchampion"] }
stride_backend.workspace = true
stride_database.workspace = true

taskchampion.workspace = true
uuid.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
